# kafka-client-playground

./: README.md  docker-compose.yml  kafka-client-playground.cabal  kafka-client-test.cabal  stack.yaml
app/: .#Main.hs  Main.hs
src/: Conduit.hs
