name:                kafka-client-playground
version:             1.0.0
synopsis:            Test application for kafka client + avro
description:         Please see README.md
homepage:            https://github.com/haskell-works/kafka-client-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Raga
maintainer:          alexey.raga@gmail.com
copyright:           Alexey Raga
category:            Services
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Conduit
  build-depends:       avro,
                       base >= 4.7 && < 5,
                       bytestring,
                       conduit,
                       conduit-extra,
                       containers,
                       errors,
                       kafka-avro-serialiser,
                       kafka-client,
                       kafka-client-conduit,
                       mtl,
                       resourcet,
                       text,
                       transformers
  default-language:    Haskell2010

executable kafka-client-playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       avro
                     , base
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , errors
                     , kafka-avro-serialiser
                     , kafka-client
                     , kafka-client-conduit
                     , kafka-client-playground
                     , mtl
                     , resourcet
                     , text
                     , transformers
  default-language:    Haskell2010

test-suite kafka-client-playground-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       avro
                     , base
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , errors
                     , kafka-client
                     , kafka-client-conduit
                     , kafka-client-playground
                     , mtl
                     , resourcet
                     , text
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-works/kafka-client-playground
